--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -66,7 +66,7 @@
                 <button>
                     <i class="fa-solid fa-list" style="font-size: 20px;">
                         <p
-                            style="display: inline;font-size: 20px;font-family: Arial, Helvetica, sans-serif;font-weight: lighter;">
+                            style="display: inline;font-size: medium;font-family: Arial, Helvetica, sans-serif;font-weight: lighter;">
                             Danh Mục Sản Phẩm</p>
                     </i>
                 </button>
