--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -1,11 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
+    <script th:src="@{/js/reUse.js}"></script>
+    <link rel="stylesheet" href="/src/main/resources/static/css/Cart.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header th:insert="~{header :: header}"></header>
+    <br>
+    <div class="small-background"
+        style="background-image: url('/images/background1.jpg');padding-top: 20px;
+        background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;position: relative;height: 300px;">
+        <div class="row" style="padding-top: 100px;">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+                <p th:text="${title}" class="h1" style="color: white;text-align: left;"></p>
+                <div style="display: inline-flex;">
+                    <div th:if="${session.userEmail != null}">
+                        <a th:href="@{/user/}"
+                            style=" font-family: 'Courier New', Courier, monospace; text-decoration: none; color: white;font-size: larger;display: inline;"
+                            onmouseover="this.style.textDecoration='underline'"
+                            onmouseout="this.style.color='white'; this.style.textDecoration='none'">Trang chủ</a>
+                    </div>
+                    <div th:unless="${session.userEmail != null}">
+                        <a th:href="@{/}"
+                            style=" font-family: 'Courier New', Courier, monospace; text-decoration: none; color: white;font-size: larger;display: inline;"
+                            onmouseover="this.style.textDecoration='underline'"
+                            onmouseout="this.style.color='white'; this.style.textDecoration='none'">Trang chủ</a>
+                        </a>
+                    </div>
+                </div>
+                <p th:text="' / '+${title}" class="h5" style="color: white;display: inline;"></p>
+            </div>
+        </div>
+    </div>
+    <section class="h-100 h-custom">
+        <div class="container h-100 py-5">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">
+                                        <input class="form-check-input" type="checkbox" name="selectAllCheckbox"
+                                            onchange="toggleCheckboxes(this)" />
+                                    </th>
+                                    <th scope="col" class="h5">Giỏ hàng</th>
+                                    <th scope="col">Thể loại</th>
+                                    <th scope="col">Số lượng</th>
+                                    <th scope="col">Giá</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="cartProBox : ${cartBookList}">
+                                    <th class="align-middle">
+                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel" />
+                                    </th>
+                                    <th scope="row">
+                                        <div class="d-flex align-items-center">
+                                            <img th:src="@{'/images/'+${cartProBox.key.book.img}}"
+                                                class="img-fluid rounded-3" style="width: 120px;" alt="Book">
+                                            <div class="flex-column ms-4">
+                                                <p class="mb-2" name="name" th:text="${cartProBox.key.book.name}"></p>
+                                                <p class="mb-0" name="author" th:text="${cartProBox.key.book.author}">
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <td class="align-middle">
+                                        <p class="mb-0" style="font-weight: 500;"
+                                            th:text="${cartProBox.key.book.bookType.name}"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <div class="d-flex flex-row">
+                                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
+                                                onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                <i class="fas fa-minus"></i>
+                                            </button>
+
+                                            <input min="0" name="quantity"  
+                                                th:value="${cartProBox.key.book.SL}" type="number"
+                                                class="form-control form-control-sm" style="width: 50px;" />
+
+                                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
+                                                onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                <i class="fas fa-plus"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                    <td class="align-middle">
+                                        <p class="mb-0" style="font-weight: 500;" th:text="${cartProBox.value+'đ'}"></p>
+                                    </td>
+                                    <td class="align-middle">
+                                        <a th:href="@{/cart/delete/__${cartProBox.key.id}__}" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="card mb-5">
+                        <div class="card-body p-4">
+
+                            <div class="float-end">
+                                <p class="mb-0 me-5 d-flex align-items-center">
+                                    <span class="small text-muted me-2">Order total:</span> <span
+                                        class="lead fw-normal"></span>
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button type="button" data-mdb-button-init data-mdb-ripple-init
+                            class="btn btn-light btn-lg me-2">Continue shopping</button>
+                        <button type="button" data-mdb-button-init data-mdb-ripple-init
+                            class="btn btn-primary btn-lg">Thanh toán</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        </div>
+        </div>
+        </div>
+    </section>
+
+    <footer th:insert="~{footer :: footer}"></footer>
+
+    <script>
+        function toggleCheckboxes(source) {
+            checkboxes = document.getElementsByName('checkBoxNoLabel');
+            for (var i = 0, n = checkboxes.length; i < n; i++) {
+                checkboxes[i].checked = source.checked;
+            }
+        }
+    </script>
 </body>
+
 </html>
