--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -76,22 +76,22 @@
 
 
                                     <div class="col-sm-6 dropdown">
-                                        <a
-                                            style="text-decoration: none; color: white; font-size: small;"
+                                        <a style="text-decoration: none; color: white; font-size: small;"
                                             onmouseover=" this.style.textDecoration='underline'"
                                             onmouseout=" this.style.textDecoration='none'">
                                             <i class="fa-solid fa-list"></i>DANH MỤC SẢN PHẨM
                                         </a>
                                         <div class="dropdown-content">
                                             <a th:href="@{/getAllBook}">
-                                                <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;color: #01a14b;font-weight: bolder;">
+                                                <p
+                                                    style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;color: #01a14b;font-weight: bolder;">
                                                     Tất cả sản phẩm</p>
                                             </a>
-                                            <div th:each="type : ${bookTypeList}">
+                                            <div th:each="type : ${session.bookTypeList}">
                                                 <a th:href="@{/book/getBookByType/__${type.id}__}">
                                                     <i class="fa-solid fa-book-open-reader">
                                                         <p th:text="'  '+${type.name}"
-                                                            style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;">
+                                                            style="font-family: Arial, Helvetica, sans-serif, serif;display: inline-flex;">
                                                         </p>
                                                     </i>
                                                 </a>
@@ -156,7 +156,8 @@
                             </div>
                             <div class="col">
                                 <div th:if="${session.userEmail!= null}">
-                                    <a href="#" style="text-decoration: none; color: white; font-size: small;"
+                                    <a th:href="@{/cart/viewCart}"
+                                        style="text-decoration: none; color: white; font-size: small;"
                                         onmouseover=" this.style.textDecoration='underline'"
                                         onmouseout=" this.style.textDecoration='none'"><i
                                             class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
@@ -165,7 +166,7 @@
                                     <a th:href="@{/user/}"
                                         style="text-decoration: none; color: white; font-size: small;"
                                         onmouseover=" this.style.textDecoration='underline'"
-                                        onmouseout=" this.style.textDecoration='none'"><i
+                                        onmouseout=" this.style.textDecoration='none'" id="panier"><i
                                             class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
                                 </div>
                             </div>
@@ -187,8 +188,6 @@
 
                 </div>
             </div>
-        </header>
-
     </div>
 </body>
 
