--- a/BookSaleProject/src/main/resources/static/css/reUse.css
+++ b/BookSaleProject/src/main/resources/static/css/reUse.css
@@ -51,3 +51,16 @@ iframe {
     display: block;
     opacity: 1;
 }
+/* Animation cho hover vào thẻ card */
+.card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+/* Class để tắt hover khi mở modal */
+.card.no-hover:hover {
+    transform: none;
+}
+
+
+
