--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -92,29 +92,37 @@
                                         <p class="mb-0" style="font-weight: 500;"
                                             th:text="${cartProBox.key.book.bookType.name}"></p>
                                     </td>
-                                    <td class="align-middle">
-                                        <div class="d-flex flex-row">
-                                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
-                                                onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                                                <i class="fas fa-minus"></i>
-                                            </button>
+                                    <form th:action="@{/cart/update/__${cartProBox.key.id}__}" th:method="post">
+                                        <td class="align-middle">
+                                            <div class="d-flex flex-row">
+                                                <button data-mdb-button-init data-mdb-ripple-init
+                                                    class="btn btn-link px-2" type="submit"
+                                                    onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                    <i class="fas fa-minus"></i>
+                                                </button>
 
-                                            <input min="0" name="quantity"  
-                                                th:value="${cartProBox.key.book.SL}" type="number"
-                                                class="form-control form-control-sm" style="width: 50px;" />
+                                                <input min="0" name="quantity" th:value="${cartProBox.key.SL}"
+                                                    type="number" class="form-control form-control-sm"
+                                                    style="width: 50px;" />
 
-                                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link px-2"
-                                                onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                                                <i class="fas fa-plus"></i>
-                                            </button>
-                                        </div>
-                                    </td>
+                                                <button data-mdb-button-init data-mdb-ripple-init
+                                                    class="btn btn-link px-2" type="submit"
+                                                    onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                    <i class="fas fa-plus"></i>
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </form>
+
                                     <td class="align-middle">
                                         <p class="mb-0" style="font-weight: 500;" th:text="${cartProBox.value+'đ'}"></p>
                                     </td>
-                                    <td class="align-middle">
-                                        <a th:href="@{/cart/delete/__${cartProBox.key.id}__}" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
-                                    </td>
+                                    <form th:action="@{/cart/delete/__${cartProBox.key.id}__}" th:method="post">
+                                        <td class="align-middle">
+                                            <button type="submit" class="text-danger"><i
+                                                    class="fas fa-trash fa-lg"></i></button>
+                                        </td>
+                                    </form>
                                 </tr>
                             </tbody>
                         </table>
@@ -133,18 +141,10 @@
                     </div>
                     <div class="d-flex justify-content-end">
                         <button type="button" data-mdb-button-init data-mdb-ripple-init
-                            class="btn btn-light btn-lg me-2">Continue shopping</button>
-                        <button type="button" data-mdb-button-init data-mdb-ripple-init
                             class="btn btn-primary btn-lg">Thanh toán</button>
                     </div>
                 </div>
-
             </div>
-        </div>
-
-        </div>
-        </div>
-        </div>
     </section>
 
     <footer th:insert="~{footer :: footer}"></footer>
