--- a/BookSaleProject/src/main/resources/templates/SubmitCode.html
+++ b/BookSaleProject/src/main/resources/templates/SubmitCode.html
@@ -4,41 +4,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/SubmitCode.css}">
     <title>Document</title>
 </head>
 
 <body>
-    <script th:inline="javascript">
-        var code = /*[[${code}]]*/ {};
-        var codeNumber = parseInt(code);
 
-        window.onload = function() {
-            document.getElementById("submitBtn").disabled = true;
-        };
+    <section class="container-fluid bg-body-tertiary d-block">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-lg-4" style="min-width: 500px;">
+                <div class="card bg-white mb-5 mt-5 border-0" style="box-shadow: 0 12px 15px rgba(0, 0, 0, 0.02);">
+                    <div class="card-body p-5 text-center">
+                        <h4>Verify</h4>
+                        <p>Your code was sent to you via email</p>
+                        <div class="otp-field mb-4">
+                            <input type="number" />
+                            <input type="number" disabled />
+                            <input type="number" disabled />
+                            <input type="number" disabled />
+                            <input type="number" disabled />
+                        </div>
+                        <form th:action="@{/user/registerSucess}" th:object="${user}" th:method="post">
+                            <input type="hidden" th:field="${user.email}">
+                            <input type="hidden" th:field="${user.password}">
+                            <input type="hidden" th:field="${user.username}">
+                            <input type="hidden" th:field="${user.sdt}">
+                            <button class="btn btn-primary mb-3" id="submitBtn" type="submit">
+                                Verify
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script th:inline="javascript"> 
+        const inputs = document.querySelectorAll(".otp-field > input");
+        const button = document.querySelector(".btn");
 
-        function checkCode() {
-            var text = document.getElementById("code").value;
-            if (text.length === 5) { // Kiểm tra xem đã nhập đủ 5 kí tự chưa
-                if (codeNumber === parseInt(text)) {
-                    document.getElementById("submitBtn").disabled = false; // Kích hoạt nút "Submit"
+        window.addEventListener("load", () => inputs[0].focus());
+        button.setAttribute("disabled", "disabled");
+
+        inputs[0].addEventListener("paste", function (event) {
+            event.preventDefault();
+
+            const pastedValue = (event.clipboardData || window.clipboardData).getData(
+                "text"
+            );
+            const otpLength = inputs.length;
+
+            for (let i = 0; i < otpLength; i++) {
+                if (i < pastedValue.length) {
+                    inputs[i].value = pastedValue[i];
+                    inputs[i].removeAttribute("disabled");
+                    inputs[i].focus;
                 } else {
-                    alert("Code sai");
-                    document.getElementById("submitBtn").disabled = true; // Vô hiệu hóa nút "Submit"
+                    inputs[i].value = ""; // Clear any remaining inputs
+                    inputs[i].focus;
                 }
-            } else {
-                document.getElementById("submitBtn").disabled = true;
             }
-        }
-    </script>
+        });
 
-    <form th:action="@{/user/registerSucess}" th:object="${user}" th:method="post">
-        <input type="hidden" th:field="${user.email}">
-        <input type="hidden" th:field="${user.password}">
-        <input type="hidden" th:field="${user.username}">
-        <input type="hidden" th:field="${user.sdt}">
-        <input type="text" name="code" id="code" oninput="checkCode()"> <!-- Gọi hàm checkCode() khi có sự kiện input -->
-        <button type="submit" id="submitBtn">Submit</button>
-    </form>
+        inputs.forEach((input, index1) => {
+            input.addEventListener("keyup", (e) => {
+                const currentInput = input;
+                const nextInput = input.nextElementSibling;
+                const prevInput = input.previousElementSibling;
+
+                if (currentInput.value.length > 1) {
+                    currentInput.value = "";
+                    return;
+                }
+
+                if (
+                    nextInput &&
+                    nextInput.hasAttribute("disabled") &&
+                    currentInput.value !== ""
+                ) {
+                    nextInput.removeAttribute("disabled");
+                    nextInput.focus();
+                }
+
+                if (e.key === "Backspace") {
+                    inputs.forEach((input, index2) => {
+                        if (index1 <= index2 && prevInput) {
+                            input.setAttribute("disabled", true);
+                            input.value = "";
+                            prevInput.focus();
+                        }
+                    });
+                }
+
+                button.classList.remove("active");
+                button.setAttribute("disabled", "disabled");
+
+                var code = /*[[${code}]]*/ {};
+                var codeNumber = parseInt(code);
+
+                const inputsNo = inputs.length;
+                if (!inputs[inputsNo - 1].disabled && inputs[inputsNo - 1].value !== "") {
+                    var codeInput = '';
+                    inputs.forEach(function (input) {
+                        codeInput += input.value;
+                    });
+                    if (codeNumber == parseInt(codeInput)) {
+                        button.classList.add("active");
+                        button.removeAttribute("disabled");
+                        return;
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
