--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -9,21 +9,32 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
 </head>
 
+
 <body class="my-login-page">
+
 	<section class="h-100">
+		
 		<div class="container h-100">
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
 					<div class="brand">
-						<h3 class="text-danger text-center">Welcome You</h3>
+						<div th:if="${Message} != null">
+							<h3 class="text-danger text-center" th:text="${Message}"></h3>
+						</div>
+						<div th:unless="${Message} != null">
+							<h3 class="text-danger text-center">Welcome You</h3>
+						</div>
+
 					</div>
 					<div class="card fat">
 						<div class="card-body">
 							<h4 class="card-title">Login</h4>
-							<form th:method="post" class="my-login-validation" th:action="@{/user/login}" th:object="${user}">
+							<form th:method="post" class="my-login-validation" th:action="@{/user/login}"
+								th:object="${user}">
 								<div class="form-group">
 									<label for="email">Email</label>
-									<input id="email" type="email" class="form-control" th:field="*{email}" name="email">
+									<input id="email" type="email" class="form-control" th:field="*{email}"
+										name="email">
 								</div>
 
 								<div class="form-group">
@@ -32,7 +43,8 @@
 											Forgot Password?
 										</a>
 									</label>
-									<input id="password" type="password" class="form-control" name="password" th:field="*{password}">
+									<input id="password" type="password" class="form-control" name="password"
+										th:field="*{password}">
 								</div>
 
 								<div class="form-group">
