--- a/BookSaleProject/src/main/resources/templates/bookDetail.html
+++ b/BookSaleProject/src/main/resources/templates/bookDetail.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
-    <script th:src="@{/js/spinButton.js}"></script>
     <title>Mua bán sách</title>
 
 
@@ -80,7 +79,7 @@
                         <p th:text="${book.detail}"></p>
                     </div>
 
-                    <form th:action="@{/cart/add/__${book.key.id}__}" th:method="post">
+                    <form th:action="@{/cart/add/__${book.id}__}" th:method="post">
                         <div style="padding-top: 2%;">
                             <div class="input-group w-auto align-items-center" style="display: inline-flex;">
                                 <input type="button" value="-" class="button-minus border  icon-shape icon-sm mx-1 "
@@ -95,7 +94,8 @@
                                     <a th:href="@{/user/}" style="font-size: 25px;color:#01a14b;border: none;">
                                         <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
                                             <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">
-                                                THÊM VÀO GIỎ HÀNG
+                                                THÊM
+                                                VÀO GIỎ HÀNG
                                             </p>
                                         </i>
                                     </a>
@@ -104,7 +104,8 @@
                                     <button type="submit" style="font-size: 25px;color:#01a14b;border: none;">
                                         <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
                                             <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">
-                                                THÊM VÀO GIỎ HÀNG
+                                                THÊM
+                                                VÀO GIỎ HÀNG
                                             </p>
                                         </i>
                                     </button>
@@ -142,16 +143,17 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div th:each="book , status : ${BookRate}" class="col-sm-4" style="padding-top: 20px;">
-                        <div class="card" style="width:300px;">
+                        <div class="card" style="width:300px;" id="myCard" onmouseover="removeAnimation(this)"
+                            onmouseout="addAnimation(this)">
                             <button type="button" data-bs-toggle="modal"
-                                th:data-bs-target="|#bookModal${status.index}|">
+                                th:data-bs-target="|#newBookModal${status.index}|">
                                 <div style="height: 400px; overflow: hidden;">
                                     <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
                                         style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </button>
 
-                            <div class="modal fade" th:id="|bookModal${status.index}|">
+                            <div class="modal fade" th:id="|newBookModal${status.index}|">
                                 <div class="modal-dialog modal-xl modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="row">
@@ -177,7 +179,7 @@
                                                             style="color: #FF9529;display: inline;font-size: larger;"></i>
                                                     </div>
                                                     <p class="h4" th:text="${book.key.price}+' đ'"
-                                                        style="color: #01a14b;"> đ</p>
+                                                        style="color: greenyellow;"> đ</p>
                                                     <div class="row">
                                                         <div class="col-sm-3" style="padding-top: 20px;">
                                                             <strong style="min-width: 137px;">Tác giả</strong>
@@ -218,7 +220,8 @@
                                                             <p th:text="${book.key.detail}"></p>
                                                         </div>
 
-                                                        <form th:action="@{/cart/add/__${book.key.id}__}" th:method="post">
+                                                        <form th:action="@{/cart/add/__${book.key.id}__}"
+                                                            th:method="post">
                                                             <div style="padding-top: 2%;">
                                                                 <div class="input-group w-auto align-items-center"
                                                                     style="display: inline-flex;">
@@ -240,7 +243,8 @@
                                                                                 style="font-weight: bolder;">
                                                                                 <p
                                                                                     style="display: inline-flex;font-family:'Times New Roman', Times, serif">
-                                                                                    THÊM VÀO GIỎ HÀNG
+                                                                                    THÊM
+                                                                                    VÀO GIỎ HÀNG
                                                                                 </p>
                                                                             </i>
                                                                         </a>
@@ -252,7 +256,8 @@
                                                                                 style="font-weight: bolder;">
                                                                                 <p
                                                                                     style="display: inline-flex;font-family:'Times New Roman', Times, serif">
-                                                                                    THÊM VÀO GIỎ HÀNG
+                                                                                    THÊM
+                                                                                    VÀO GIỎ HÀNG
                                                                                 </p>
                                                                             </i>
                                                                         </button>
@@ -268,7 +273,8 @@
                                                     <a th:href="@{/book/getBookById/__${book.key.id}__}"
                                                         style="border: none; background-color: white; font-weight: bolder;font-size: x-large;"
                                                         onmouseover="this.style.color='#01a14b';"
-                                                        onmouseout="this.style.color='black';">Xem thêm</a>
+                                                        onmouseout="this.style.color='black';">Xem
+                                                        thêm</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -285,6 +291,7 @@
                                         onmouseout="this.style.color='black';">
                                     </p>
                                 </a>
+
                                 <p class="card-text" th:text="${book.key.price}+'đ'" style="color: #01a14b;"></p>
                                 <div class="row">
                                     <div class="col-sm-9">
@@ -326,6 +333,7 @@
 
     <footer th:insert="~{footer :: footer}"></footer>
 
+    <script th:src="@{/js/spinButton.js}"></script>
     <script th:src="@{/js/reUse.js}"></script>
 </body>
 
