order total carculate

--- a/BookSaleProject/src/main/resources/templates/Cart.html
+++ b/BookSaleProject/src/main/resources/templates/Cart.html
@@ -73,9 +73,10 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr th:each="cartProBox : ${cartBookList}">
+                                <tr th:each="cartProBox, status : ${cartBookList}">
                                     <th class="align-middle">
-                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel" />
+                                        <input class="form-check-input" type="checkbox" name="checkBoxNoLabel"
+                                            onchange="calculateOrderTotal(this)" />
                                     </th>
                                     <th scope="row">
                                         <div class="d-flex align-items-center">
@@ -114,7 +115,7 @@
                                         </td>
                                     </form>
 
-                                    <td class="align-middle">
+                                    <td class="align-middle price">
                                         <p class="mb-0" style="font-weight: 500;" th:text="${cartProBox.value+'đ'}"></p>
                                     </td>
                                     <form th:action="@{/cart/delete/__${cartProBox.key.id}__}" th:method="post">
@@ -132,8 +133,8 @@
 
                             <div class="float-end">
                                 <p class="mb-0 me-5 d-flex align-items-center">
-                                    <span class="small text-muted me-2">Order total:</span> <span
-                                        class="lead fw-normal"></span>
+                                    <span class="small text-muted me-2">Order total:</span> 
+                                    <span class="lead fw-normal order-total" name="OrderTotal">0đ</span>
                                 </p>
                             </div>
 
@@ -149,14 +150,7 @@
 
     <footer th:insert="~{footer :: footer}"></footer>
 
-    <script>
-        function toggleCheckboxes(source) {
-            checkboxes = document.getElementsByName('checkBoxNoLabel');
-            for (var i = 0, n = checkboxes.length; i < n; i++) {
-                checkboxes[i].checked = source.checked;
-            }
-        }
-    </script>
+    <script th:src="@{/js/Cart.js}"></script>
 </body>
 
 </html>
