--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -295,7 +295,7 @@
 
     <script th:src="@{/js/Directory.js}"></script>
     <script th:src="@{/js/reUse.js}"></script>
-    <script th:src="@{/js/spinButton.js}"></script>s
+    <script th:src="@{/js/spinButton.js}"></script>
 </body>
 
 </html>
