remake font-family

--- a/BookSaleProject/src/main/resources/static/css/reUse.css
+++ b/BookSaleProject/src/main/resources/static/css/reUse.css
@@ -62,5 +62,9 @@ iframe {
     transform: none;
 }
 
-
+.modal-title,
+.card-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
 
