--- a/BookSaleProject/src/main/resources/templates/bookDetail.html
+++ b/BookSaleProject/src/main/resources/templates/bookDetail.html
@@ -20,9 +20,6 @@
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
-    <title>Mua bán sách</title>
-
-
 </head>
 
 
@@ -38,7 +35,7 @@
             </div>
             <div class="col-sm-7">
                 <div>
-                    <p class="h1" th:text="${book.name}"></p>
+                    <p th:text="${book.name}" style="font-family: Arial, Helvetica, sans-serif;font-weight: lighter;font-size: xx-large;"></p>
                 </div>
                 <p class="h5" th:text="${rate}" style="display: inline;color: #FF9529;"></p>
                 <i class="fa-solid fa-star" style="color: #FF9529;display: inline;font-size: larger;"></i>
@@ -165,7 +162,7 @@
                                                 <!-- Modal Header -->
                                                 <div class="modal-header">
                                                     <p class="modal-title" th:text="${book.key.name}"
-                                                        style="font-weight: bold;font-size: xx-large;"></p>
+                                                        style="font-size: xx-large;"></p>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         style="font-size: larger;font-weight: bold;"></button>
 
@@ -286,7 +283,7 @@
                             <div class="card-body">
                                 <a th:href="@{/book/getBookById/__${book.key.id}__}">
                                     <p class="card-title" th:text="${book.key.name}"
-                                        style="font-size: larger;font-weight: bold;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"
+                                        style="font-size: larger;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"
                                         onmouseover="this.style.color='#01a14b';"
                                         onmouseout="this.style.color='black';">
                                     </p>
