--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -21,8 +21,6 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/Directory.css}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Mua bán sách</title>
-
 </head>
 
 
@@ -35,7 +33,7 @@
         <div class="row" style="padding-top: 100px;">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
-                <p th:text="${title}" class="h1" style="color: white;text-align: left;"></p>
+                <p th:text="${title}" class="h1" style="color: white;text-align: left;font-family: Arial, Helvetica, sans-serif;font-size: xx-large;"></p>
                 <div style="display: inline-flex;">
                     <div th:if="${session.userEmail != null}">
                         <a th:href="@{/user/}"
@@ -51,7 +49,7 @@
                         </a>
                     </div>
                 </div>
-                <p th:text="' / '+${title}" class="h5" style="color: white;display: inline;"></p>
+                <p th:text="' / '+${title}" style="color: white;display: inline;font-family: Arial, Helvetica, sans-serif;font-size: large;"></p>
             </div>
         </div>
 
@@ -97,7 +95,7 @@
             </div>
         </div>
         <div class="col-md-9">
-            <p class="h3" th:text="${title}" style="padding: 0 0 20px 0;"></p>
+            <p class="h3" th:text="${title}" style="padding: 0 0 20px 0;font-family: Arial, Helvetica, sans-serif;"></p>
             <div class="row">
                 <div th:each="book, status : ${BookRate}" class="col-sm-4" style="padding-top: 20px; ">
                     <div class="card" style="width:300px;" data-mdb-toggle="animation" data-mdb-animation-reset="true"
@@ -121,7 +119,7 @@
                                             <!-- Modal Header -->
                                             <div class="modal-header">
                                                 <p class="modal-title" th:text="${book.key.name}"
-                                                    style="font-weight: bold;font-size: xx-large;"></p>
+                                                    style="font-size: xx-large;"></p>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     style="font-size: larger;font-weight: bold;"></button>
 
@@ -237,7 +235,7 @@
                         <div class="card-body">
                             <a th:href="@{/book/getBookById/__${book.key.id}__}">
                                 <p class="card-title" th:text="${book.key.name}"
-                                    style="font-size: larger;font-weight: bold;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"
+                                    style="font-size: larger;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;"
                                     onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
                                 </p>
                             </a>
