--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
     <script th:src="@{/js/reUse.js}"></script>
-
-    </style>
 </head>
 
 <body>
@@ -84,16 +82,15 @@
                                         <div class="dropdown-content">
                                             <a th:href="@{/getAllBook}">
                                                 <p
-                                                    style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;color: #01a14b;font-weight: bolder;">
+                                                    style="font-family:Arial, Helvetica, sans-serif, serif;display: inline-flex;color: #01a14b;font-weight: lighter;">
                                                     Tất cả sản phẩm</p>
                                             </a>
                                             <div th:each="type : ${bookTypeList}">
                                                 <a th:href="@{/book/getBookByType/__${type.id}__}">
-                                                    <i class="fa-solid fa-book-open-reader">
-                                                        <p th:text="'  '+${type.name}"
-                                                            style="font-family: Arial, Helvetica, sans-serif, serif;display: inline-flex;">
-                                                        </p>
-                                                    </i>
+                                                    <i class="fa-solid fa-book-open-reader"></i>
+                                                    <p th:text="'  '+${type.name}"
+                                                        style="font-family: Arial, Helvetica, sans-serif, serif;display: inline-flex;display: inline-flex;">
+                                                    </p>
                                                 </a>
                                             </div>
                                         </div>
@@ -127,26 +124,25 @@
                                 <div th:unless="${session.userEmail==null}">
                                     <div class="dropdown">
                                         <a
-                                            style="text-decoration: none; color: white; font-size: large;cursor: pointer;">
-                                            <i class="fa-solid fa-user">
-                                                <p th:text="'  '+${session.userName}"
+                                            style="text-decoration: none; color: white;cursor: pointer;">
+                                            <i class="fa-solid fa-user"></i>
+                                            <p th:text="'  '+${session.userName}"
                                                     style="display: inline-flex;font-family:Arial, Helvetica, sans-serif;
-                                                    font-weight: 80;overflow: hidden;text-overflow: ellipsis;max-width: 110px;font-size: medium;">
+                                                    font-weight: lighter;overflow: hidden;text-overflow: ellipsis;max-width: 110px;">
                                                 </p>
-                                            </i>
                                         </a>
                                         <div class="dropdown-content">
                                             <div>
                                                 <a th:href="@{/user/userInfo}">
                                                     <p
-                                                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;">
+                                                        style="font-family: Arial, Helvetica, sans-serif, serif;display: inline-flex;">
                                                         Tài khoản của tôi</p>
                                                 </a>
                                             </div>
                                             <div>
                                                 <a th:href="@{/user/logout}">
                                                     <p
-                                                        style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;display: inline-flex;">
+                                                        style="font-family: Arial, Helvetica, sans-serif, serif;display: inline-flex;">
                                                         Đăng xuất</p>
                                                 </a>
                                             </div>
